--- a/14355-h/14355-h.htm
+++ b/14355-h/14355-h.htm
@@ -727,7 +727,7 @@ Ohio and New York, mixed as those things were in Tyler's time. I
 had even been as far west as the Rockies, of which young
 Fr&eacute;mont was now beginning to write so understandingly. For
 six months I had been in Mississippi and Texas studying matters and
-men, and now, just hack from Natchitoches, I felt that I had earned
+men, and now, just back from Natchitoches, I felt that I had earned
 some little rest.</p>
 <p>But there was the fascination of it&mdash;that big game of
 politics. No, I will call it by its better name of statesmanship,
@@ -2114,7 +2114,7 @@ apart for a time, watching the progress of this purely American
 function. It was some time ere the groups thinned. This latter fact
 usually would have ended the reception, since it is not etiquette
 to suppose that the president can lack an audience; but to-day Mr.
-Tyler lingered. As last through the thinning throng he caught sight
+Tyler lingered. At last through the thinning throng he caught sight
 of the distinctive figure of Mr. Calhoun. For the first time his
 own face assumed a natural expression. He stopped the line for an
 instant, and with a raised hand beckoned to my chief.</p>
@@ -5788,7 +5788,7 @@ trading post, Fort Hall, we had still more than six hundred miles
 to go.</p>
 <p>By this time our forces had wasted as though under assault of
 arms. Far back on the trail, many had been forced to leave prized
-belongings, relies, heirlooms, implements, machinery, all
+belongings, relics, heirlooms, implements, machinery, all
 conveniences. The finest of mahogany blistered in the sun,
 abandoned and unheeded. Our trail might have been followed by
 discarded implements of agriculture, and by whitened bones as well.
@@ -6222,7 +6222,7 @@ Mr. Calhoun."</p>
 smile.</p>
 <p>"Nothing, except that you take back all the facts&mdash;and
 allow them to mediate. Let them determine between the Old World and
-this New one&mdash;you satin couch and this rude one you have
+this New one&mdash;your satin couch and this rude one you have
 learned to make. Tell the truth only. Choose, then, Madam!"</p>
 <p>"Nations do not ask the truth. They want only excuses."</p>
 <p>"Quite true. And because of that, all the more rests with you.
@@ -6364,7 +6364,7 @@ you both. What had the world ever given me? What had I
 done&mdash;what had I been&mdash;what could I ever be? Your
 messenger came back with the slipper. The note was in the shoe
 untouched. Your messenger had not found it, either. See, I
-<i>did</i> mean it for you alone. But now seine sudden thought came
+<i>did</i> mean it for you alone. But now since sudden thought came
 to me. I tucked it back and sent your drunken friend away with it
 for her&mdash;where I knew it would be found! I did not know what
 would be the result. I was only desperate over what life had done
@@ -6541,7 +6541,7 @@ in devotions for a time, and I would no more have spoken than had
 she been at her prayers, as, indeed, I think she was. At last she
 made some faint movement of her hands. I do not know whether it was
 the sign of the cross.</p>
-<p>She rose now, tail, white-clad, shimmering, a vision of beauty
+<p>She rose now, tall, white-clad, shimmering, a vision of beauty
 such as that part of the world certainly could not then offer. Her
 hair was loosened now in its masses and drooped more widely over
 her temples, above her brow. Her eyes were very large and dark, and
@@ -7209,7 +7209,7 @@ should I do but take her in my arms!"</p>
 seen her for many years, long, cruel years. I suppose her dead. But
 now there we were, standing, looking in each other's eyes! We see
 there&mdash;Ach, Gott! what do we not see? Yet in spite of all, it
-wass Helena But she shall tell you." He tottered from the room.</p>
+wass Helena. But she shall tell you." He tottered from the room.</p>
 <p>I heard his footsteps pass down the hall. Then softly, almost
 silently, Helena von Ritz again stood before me. The light from a
 side window fell upon her face. Yes, it was she! Her face was
